--- a/plugins/myxmlfs/pom.xml
+++ b/plugins/myxmlfs/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>myFTPServer</artifactId>
-        <groupId>com.longkaili</groupId>
+        <groupId>com.longkaili.FTPServer</groupId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
